--- a/package.json
+++ b/package.json
@@ -3,9 +3,30 @@
     "@prisma/client": "^6.4.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "nodemailer": "^6.10.0",
     "prisma": "^6.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
-  }
+  },
+  "name": "backendretrobox",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "vercel-build": "npx prisma generate && npx prisma migrate deploy"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Muhammed21/frontend-retrobox.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Muhammed21/frontend-retrobox/issues"
+  },
+  "homepage": "https://github.com/Muhammed21/frontend-retrobox#readme",
+  "description": ""
 }
